[gd_scene load_steps=10 format=3 uid="uid://b5un78p84uik2"]

[ext_resource type="Texture2D" uid="uid://csda3qg4dfa1e" path="res://assets/Backgrounds/preview.png" id="1_8l3u8"]
[ext_resource type="Script" uid="uid://bsi7hvfmcwssu" path="res://src/StartScreen/new_game.gd" id="1_ilsnu"]
[ext_resource type="Script" uid="uid://0ad1m7m8j7ba" path="res://src/StartScreen/quit.gd" id="1_x5plg"]
[ext_resource type="Script" uid="uid://mbi46648c8lx" path="res://src/StartScreen/continue.gd" id="1_yevbf"]
[ext_resource type="Script" path="res://src/StartScreen/settings_button.gd" id="3_hrrfr"]
[ext_resource type="Script" uid="uid://sehkuo2xbwos" path="res://src/Worlds/world_tracker.gd" id="4_1l0fv"]
[ext_resource type="Resource" uid="uid://b7d426jw88wxl" path="res://src/Worlds/world_handler.tres" id="5_lva2g"]
[ext_resource type="Script" path="res://src/StartScreen/settings_menu.gd" id="7_8l3u8"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8l3u8"]
bg_color = Color(0.144063, 0.144063, 0.144062, 0.6)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[node name="StartMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="BackgroundTexture" type="TextureRect" parent="."]
modulate = Color(0.969137, 0.969137, 0.969137, 1)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_8l3u8")

[node name="GameTitle" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -224.5
offset_top = 60.0
offset_right = 224.5
offset_bottom = 95.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 55
text = "Defeat The Demonlord"
horizontal_alignment = 1

[node name="ButtonBackground" type="Panel" parent="."]
custom_minimum_size = Vector2(250, 200)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -125.0
offset_top = -65.0
offset_right = 125.0
offset_bottom = 135.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_8l3u8")

[node name="ButtonContainer" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(200, 150)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -40.0
offset_right = 100.0
offset_bottom = 110.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 10

[node name="NewGame" type="Button" parent="ButtonContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "New Game"
script = ExtResource("1_ilsnu")

[node name="Continue" type="Button" parent="ButtonContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Continue"
script = ExtResource("1_yevbf")

[node name="Settings" type="Button" parent="ButtonContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Settings"
script = ExtResource("3_hrrfr")

[node name="Quit" type="Button" parent="ButtonContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Quit"
script = ExtResource("1_x5plg")

[node name="SettingsMenu" type="PanelContainer" parent="."]
process_mode = 3
visible = false
custom_minimum_size = Vector2(400, 250)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -125.0
offset_right = 200.0
offset_bottom = 125.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource("7_8l3u8")

[node name="VBoxContainer" type="VBoxContainer" parent="SettingsMenu"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 20

[node name="MusicContainer" type="VBoxContainer" parent="SettingsMenu/VBoxContainer"]
layout_mode = 2

[node name="MusicText" type="Label" parent="SettingsMenu/VBoxContainer/MusicContainer"]
layout_mode = 2
text = "Music Volume:"

[node name="MusicVolume" type="HScrollBar" parent="SettingsMenu/VBoxContainer/MusicContainer"]
custom_minimum_size = Vector2(0, 15)
layout_mode = 2
min_value = -60.0
max_value = 20.0
page = 1.0
value = -5.0

[node name="SfxContainer" type="VBoxContainer" parent="SettingsMenu/VBoxContainer"]
layout_mode = 2

[node name="SfxText" type="Label" parent="SettingsMenu/VBoxContainer/SfxContainer"]
layout_mode = 2
text = "Sound Effects Volume:"

[node name="SfxVolume" type="HScrollBar" parent="SettingsMenu/VBoxContainer/SfxContainer"]
custom_minimum_size = Vector2(0, 15)
layout_mode = 2
min_value = -60.0
max_value = 20.0
page = 1.0
value = -5.0

[node name="Close" type="Button" parent="SettingsMenu/VBoxContainer"]
layout_mode = 2
text = "Close"

[node name="WorldHandler" type="Node" parent="."]
script = ExtResource("4_1l0fv")
world_script = ExtResource("5_lva2g")

[connection signal="pressed" from="SettingsMenu/VBoxContainer/Close" to="SettingsMenu" method="_on_close_pressed"]
